# vol-daos

./: .clang-format  .gitmodules  ACKNOWLEDGMENTS  AUTHORS  CMakeInstallation.cmake  CMakeLists.txt  COPYING  COPYING_ADDENDUM  CTestConfig.cmake  Makefile.am  README.md  autogen.sh  build_vol_autotools.sh  build_vol_cmake.bat  build_vol_cmake.sh  configure.ac
.github/: CODEOWNERS
.github/workflows/: ci.yml  clang-format-check.yml  clang-format-fix.yml  codespell.yml  pre-release.yml  release.yml
CMake/: FindCART.cmake  FindDAOS.cmake  FindUUID.cmake  Hdf5VolDaosDetermineVersion.cmake  hdf5_daos-config-version.cmake.in  hdf5_daos-config.cmake.build.in  hdf5_daos-config.cmake.install.in  hdf5_daos.pc.in  hdf5_vol_daos-config-version.cmake.in  hdf5_vol_daos-config.cmake.build.in  hdf5_vol_daos-config.cmake.in  hdf5_vol_daos-config.cmake.install.in  hdf5_vol_daos.pc.in
docs/: CHANGES.md  CHANGES_template.md  DAOS VOL connector object mapping.doc  HDF5 DAOS Map Design.docx  HDF5 DAOS VOL Connector User's Guide.docx  HDF5 DAOS VOL User's Guide.tex
docs/common/: THG.cls  THG_Guide.cls
docs/design_doc/: Makefile  THG_Guide.cls  design_doc-body.tex  design_doc.tex  hdf5-c-lexer.py
docs/design_doc/sections/: abstract.tex  design.tex  map.tex
docs/design_doc/support/: glossary.tex  revisions.tex
docs/users_guide/: Makefile  THG.cls  THG_Guide.cls  ref_manual.tex  users_guide-body.tex  users_guide-dyn_vol_connectors.tex  users_guide-feature_support.tex  users_guide-limitations.tex  users_guide-native.tex  users_guide-testing.tex  users_guide-usage.tex  users_guide.tex
docs/users_guide/appendices/: native.tex  ref_manual.tex
docs/users_guide/images/: vol.tex
docs/users_guide/sections/: abstract.tex  feature_support.tex  overview.tex  testing.tex  usage.tex
docs/users_guide/support/: glossary.tex  revisions.tex  rfc.bib
examples/: BuildExamples.cmake  CMakeLists.txt  Makefile.am  README  h5dsm_attr_create.c  h5dsm_attr_iter.c  h5dsm_attr_open.c  h5dsm_attr_read.c  h5dsm_attr_write.c  h5dsm_dset_create.c  h5dsm_dset_open.c  h5dsm_dset_r1m.c  h5dsm_dset_read.c  h5dsm_dset_rpartial.c  h5dsm_dset_w1m.c  h5dsm_dset_wpartial.c  h5dsm_dset_write.c  h5dsm_example.h  h5dsm_file_create.c  h5dsm_file_open.c  h5dsm_group_create.c  h5dsm_group_open.c  h5dsm_link_exists.c  h5dsm_link_iter.c  h5dsm_map.c  h5dsm_obj_info.c  h5dsm_obj_open.c  h5dsm_obj_open_addr.c  h5dsm_slink_create.c  h5dsm_tcommit.c  h5dsm_ttconv.c  h5dsm_tvlen.c  run-all-ex.sh  run-c-ex.sh.in
gcloud/: doc.txt  hdf-spack.yaml
scripts/: .daos_server.active.yml  run_daos_application.sh
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  daos_vol.c  daos_vol.h  daos_vol.lo  daos_vol_attr.c  daos_vol_attr.lo  daos_vol_blob.c  daos_vol_config.h  daos_vol_config.h.in  daos_vol_config.h.in~  daos_vol_debug.c  daos_vol_dset.c  daos_vol_dset.lo  daos_vol_err.h  daos_vol_file.c  daos_vol_file.lo  daos_vol_group.c  daos_vol_group.lo  daos_vol_link.c  daos_vol_link.lo  daos_vol_map.c  daos_vol_map.lo  daos_vol_obj.c  daos_vol_obj.lo  daos_vol_private.h  daos_vol_public.h  daos_vol_req.c  daos_vol_req.lo  daos_vol_testing.c  daos_vol_type.c  daos_vol_type.lo  libdaosvol.la  libdaosvol.settings  libdaosvol.settings.in  stamp-h1
src/.deps/: daos_vol.Plo  daos_vol_attr.Plo  daos_vol_dset.Plo  daos_vol_file.Plo  daos_vol_group.Plo  daos_vol_link.Plo  daos_vol_map.Plo  daos_vol_obj.Plo  daos_vol_req.Plo  daos_vol_type.Plo
src/.libs/: libdaosvol.la  libdaosvol.lai  libdaosvol.so.0.0.0
src/util/: CMakeLists.txt  daos_vol_err.c  daos_vol_err.h  daos_vol_err.lo  daos_vol_hash_table.c  daos_vol_hash_table.h  daos_vol_mem.c  daos_vol_mem.h  daos_vol_mem.lo  daos_vol_task_list.c  daos_vol_task_list.h
src/util/.deps/: daos_vol_err.Plo  daos_vol_mem.Plo
test/: CMakeLists.txt  Makefile.am  test_daos_vol.c  test_daos_vol.h
test/daos_vol/: CMakeLists.txt  Makefile.am  h5daos_test.h  h5daos_test_map.c  h5daos_test_map_parallel.c  h5daos_test_metadata.c  h5daos_test_metadata_parallel.c  h5daos_test_oclass.c  h5daos_test_recovery.c  run_recovery_test_sockets.sh  test_daos_vol.c  test_daos_vol.h
test/scripts/: create_daos_pool.sh  daos.uri  daos_agent.sh.in  daos_agent.yml.in  daos_pool.sh.in  daos_server.yml.in  daos_server_master.yml.in  destroy_daos_pool.sh  hdf5_vol_daos_common.cmake  jelly_build.sh  jelly_build_async.sh  jelly_build_master.sh  jelly_script.cmake  jelly_script_async.cmake  jelly_script_master.cmake  jelly_server.yml  run_recovery_test.sh  start_daos_server.sh
test/vol/: CMakeLists.txt  testpar.h  vol_attribute_test.c  vol_attribute_test.h  vol_dataset_test.c  vol_dataset_test.h  vol_datatype_test.c  vol_datatype_test.h  vol_file_test.c  vol_file_test.h  vol_group_test.c  vol_group_test.h  vol_link_test.c  vol_link_test.h  vol_misc_test.c  vol_misc_test.h  vol_object_test.c  vol_object_test.h  vol_test.c  vol_test.h  vol_test_parallel.h
